# src/main/openapi/api.yml
@@ -115,7 +115,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Tokens"
-  /api/v1/admin/process-files:
+  /api/v1/admin/process/csv:
     post:
       tags:
       - Admin
@@ -123,6 +123,21 @@ paths:
       operationId: triggerCsvProcessing
       parameters:
       - name: forceFullReload
+        in: query
+        required: false
+        schema:
+          type: boolean
+      responses:
+        "200":
+          description: OK
+  /api/v1/admin/process/api:
+    post:
+      tags:
+      - Admin
+      summary: Manually trigger the processing of Ambient Weather API data.
+      operationId: triggerApiProcessing
+      parameters:
+      - name: processAllAvailable
         in: query
         required: false
         schema:
@@ -280,6 +295,8 @@ components:
                   additionalProperties:
                     type: number
                     format: double
+      required:
+      - weather
     AppVersion:
       type: object
       properties:
